apps/base/odc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datacube-ows
  namespace: odc
spec:
  replicas: 8
  selector:
    matchLabels:
      app: datacube-ows
  template:
    metadata:
      labels:
        app: datacube-ows
    spec:
      serviceAccountName: data-reader
      containers:
      - name: datacube-ows
        image: ghcr.io/example/datacube-ows:0.0.1-103-g20baf39
        imagePullPolicy: IfNotPresent
        command:
          [
            "gunicorn",
            "-b",
            "0.0.0.0:8000",
            "-w",
            "4",
            "--keep-alive",
            "50",
            "--timeout",
            "120",
            # "--log-level",
          # "debug",
            "datacube_ows.wsgi"
          ]
        resources:
          requests:
            cpu: 1
            memory: 2Gi
          limits:
            cpu: 2
            memory: 2Gi
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
