apps/base/odc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datacube-ows
  namespace: odc
spec:
  selector:
    app: datacube-ows
  ports:
    - port: 8000
      targetPort: 8000
